--- a/company/events.html
+++ b/company/events.html
@@ -80,11 +80,11 @@
     <em>W</em><em>e</em><em>b</em><em>i</em><em>n</em><em>a</em><em>r</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">Join us at ServiceNow events, webinars, and conferences. Connect with our experts and learn from industry leaders.
+      <p class="fade-section mb0">Join us at ServiceNow events, webinars, and conferences. <br> Connect with our experts and learn from industry leaders.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Join Us at <span>Events</span></h4>
@@ -107,26 +107,26 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>Event Types</b></h3>
-        <div class="row text-center">
+        <h3 class="fade-section font40"><b>Event Types</b></h3>
+        <div class="row text-center innerboxes three">
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Conferences <span>& Summits</span></h4>
-              <p class="dcnt">Attend ServiceNow Knowledge, regional summits, and industry conferences. Meet our team and learn from enterprise transformations.
+              <h4>Conferences <br> <span>& Summits</span></h4>
+              <p class=" ">Attend ServiceNow Knowledge, regional summits, and industry conferences. Meet our team and learn from enterprise transformations.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Webinars <span>& Workshops</span></h4>
-              <p class="dcnt">Join our webinars on AI-first transformations, platform optimization, and best practices. Learn from the comfort of your office.
+              <h4>Webinars <br> <span>& Workshops</span></h4>
+              <p class=" ">Join our webinars on AI-first transformations, platform optimization, and best practices. Learn from the comfort of your office.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="dbox">
-              <h4>User Groups <span>& Meetups</span></h4>
-              <p class="dcnt">Connect with local ServiceNow communities. Share experiences, learn from peers, and network with industry professionals.
+              <h4>User Groups <br> <span>& Meetups</span></h4>
+              <p class=" ">Connect with local ServiceNow communities. Share experiences, learn from peers, and network with industry professionals.
               </p>
             </div>
           </div>
@@ -134,9 +134,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Stay <span>Updated</span></h4>
           <p style="font-size: 24px; margin-bottom: 30px;">Contact us to stay informed about upcoming events, webinars, and conferences where we'll be presenting.</p>
           <div style="margin-top: 50px;">
