--- a/industries/education.html
+++ b/industries/education.html
@@ -74,7 +74,7 @@
       </div>
     </div>
 <div id="content-wrapper" class="relative overflow">
-    <div class="herobanner">
+    <div class="herobanner pb30">
       <h4 class="fade-section">Transform the Campus Experience
       </h4>
       <h1 class="fade-section">ServiceNow for <br>
@@ -82,19 +82,19 @@
     <em>E</em><em>d</em><em>u</em><em>c</em><em>a</em><em>t</em><em>i</em><em>o</em><em>n</em>
   </span>
       </h1>
-      <p class="fade-section">From student services to faculty support to IT operations—ServiceNow helps educational institutions deliver the experiences students and staff expect.
+      <p class="fade-section mb0">From student services to faculty support to IT operations—ServiceNow <br>helps educational institutions deliver the experiences students and staff expect.
 
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow" style="text-align: left;">
+        <div class="grow">
           <h4>The Modern <span>Campus Challenge</span></h4>
           <p style="font-size: 24px; margin-bottom: 30px;">Today's students expect consumer-grade digital experiences. Faculty need seamless support. IT teams are stretched thin. Legacy systems create friction at every turn.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5>Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Fragmented student service channels
             </li>
@@ -111,33 +111,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow for Education</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow for Education</b></h3>
+        <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Student <span>Service Center</span></h4>
-              <p class="dcnt">A single portal for everything students need—enrollment, housing, financial aid, IT support, and more. Self-service that actually works.
+              <p class="">A single portal for everything students need—enrollment, housing, financial aid, IT support, and more. Self-service that actually works.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>IT Service <span>Management</span></h4>
-              <p class="dcnt">Modern ITSM that supports hybrid learning environments, campus technology, and the research enterprise.
+              <p class="">Modern ITSM that supports hybrid learning environments, campus technology, and the research enterprise.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>HR Service <span>Delivery</span></h4>
-              <p class="dcnt">Streamline faculty onboarding, benefits administration, and employee services with workflows that respect academic calendars and tenure complexity.
+              <p class="">Streamline faculty onboarding, benefits administration, and employee services with workflows that respect academic calendars and tenure complexity.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Security <span>Operations</span></h4>
-              <p class="dcnt">Protect student data, research IP, and campus systems with integrated security workflows and compliance automation.
+              <p class="">Protect student data, research IP, and campus systems with integrated security workflows and compliance automation.
               </p>
             </div>
           </div>
@@ -145,9 +145,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>60%</strong> reduction in student service response time
