--- a/industries/healthcare.html
+++ b/industries/healthcare.html
@@ -80,19 +80,19 @@
     <em>H</em><em>e</em><em>a</em><em>l</em><em>t</em><em>h</em><em>c</em><em>a</em><em>r</em><em>e</em>
   </span>
       </h1>
-      <p class="fade-section">Patients deserve seamless experiences. Clinicians need systems that help, not hinder. Operations teams require visibility and control. ServiceNow delivers all three.
+      <p class="fade-section mb0">Patients deserve seamless experiences. Clinicians need systems that help, not hinder. <br> Operations teams require visibility and control. ServiceNow delivers all three.
 
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow" style="text-align: left;">
+        <div class="grow mt50">
           <h4>The Healthcare <span>Imperative</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Healthcare organizations face unprecedented pressure—staffing challenges, regulatory complexity, patient expectations, and the mandate to do more with less.</p>
+          <p style="font-size: 24px; margin-bottom: 30px;">Healthcare organizations face unprecedented pressure—staffing challenges, <br> regulatory complexity, patient expectations, and the mandate to do more with less.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5>Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Clinician burnout from administrative burden
             </li>
@@ -107,42 +107,42 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow for Healthcare</b></h3>
-        <div class="row text-center">
-          <div class="col-md-6">
+        <h3 class="fade-section font40"><b>ServiceNow for Healthcare</b></h3>
+        <div class="row text-center innerboxes three">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>Patient <span>Experience</span></h4>
-              <p class="dcnt">Unified patient communication, appointment management, and self-service capabilities that reduce call center volume and improve satisfaction.
+              <p class=" ">Unified patient communication, appointment management, and self-service capabilities that reduce call center volume and improve satisfaction.
               </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>HR Service <span>Delivery</span></h4>
-              <p class="dcnt">Address clinician burnout with streamlined onboarding, credentialing workflows, and employee service delivery that respects healthcare's unique requirements.
+              <p class=" ">Address clinician burnout with streamlined onboarding, credentialing workflows, and employee service delivery that respects healthcare's unique requirements.
               </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>IT <span>Operations</span></h4>
-              <p class="dcnt">Modern ITSM and ITOM that ensure clinical systems stay available, secure, and compliant.
+              <p class=" ">Modern ITSM and ITOM that ensure clinical systems stay available, secure, and compliant.
               </p>
             </div>
-          </div>
-          <div class="col-md-6">
+          </div><div class="col-md-2"></div>
+          <div class="col-md-4">
             <div class="dbox">
               <h4>GRC & <span>Compliance</span></h4>
-              <p class="dcnt">Automate compliance workflows, manage risk across the enterprise, and maintain audit readiness without manual effort.
+              <p class=" ">Automate compliance workflows, manage risk across the enterprise, and maintain audit readiness without manual effort.
               </p>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>Supply <span>Chain</span></h4>
-              <p class="dcnt">Visibility into medical supply inventory, automated procurement workflows, and vendor management that prevents shortages.
+              <p class="">Visibility into medical supply inventory, automated procurement workflows, and vendor management that prevents shortages.
               </p>
             </div>
           </div>
@@ -150,9 +150,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Transforming Healthcare <span>Operations</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>45%</strong> reduction in employee onboarding time
