--- a/industries/retail.html
+++ b/industries/retail.html
@@ -82,19 +82,19 @@
     <em>R</em><em>e</em><em>t</em><em>a</em><em>i</em><em>l</em>
   </span>
       </h1>
-      <p class="fade-section">In retail, experience is everything. ServiceNow helps you deliver seamless customer service, resilient supply chains, and engaged employees.
+      <p class="fade-section mb0">In retail, experience is everything. ServiceNow helps you deliver  <br>seamless customer service, resilient supply chains, and engaged employees.
 
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Retail <span>Reality</span></h4>
           <p style="font-size: 24px; margin-bottom: 30px;">Retailers compete on experience—customer experience, employee experience, and operational excellence. Legacy systems and manual processes are competitive liabilities.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5>Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Customer expectations for instant, omnichannel service
             </li>
@@ -111,40 +111,40 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow for Retail</b></h3>
-        <div class="row text-center">
-          <div class="col-md-6">
+        <h3 class="fade-section font40"><b>ServiceNow for Retail</b></h3>
+        <div class="row text-center innerboxes three">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>Customer Service <span>Management</span></h4>
-              <p class="dcnt">Omnichannel customer support that connects store, web, social, and contact center interactions. AI-powered resolution that scales with demand.
+              <p class="">Omnichannel customer support that connects store, web, social, and contact center interactions. AI-powered resolution that scales with demand.
               </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>Field Service <span>Management</span></h4>
-              <p class="dcnt">Coordinate store maintenance, equipment repair, and vendor services with visibility and efficiency.
+              <p class="">Coordinate store maintenance, equipment repair, and vendor services with visibility and efficiency.
               </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>HR Service <span>Delivery</span></h4>
-              <p class="dcnt">Onboard seasonal workers in days, not weeks. Deliver employee services that reduce turnover and improve frontline engagement.
+              <p class="">Onboard seasonal workers in days, not weeks. Deliver employee services that reduce turnover and improve frontline engagement.
               </p>
             </div>
-          </div>
-          <div class="col-md-6">
+          </div>  <div class="col-md-2"></div>
+          <div class="col-md-4">
             <div class="dbox">
               <h4>IT Service <span>Management</span></h4>
-              <p class="dcnt">Support store technology, POS systems, and e-commerce infrastructure with modern ITSM that prevents downtime.
+              <p class="">Support store technology, POS systems, and e-commerce infrastructure with modern ITSM that prevents downtime.
               </p>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-4">
             <div class="dbox">
               <h4>Supply Chain <span>Operations</span></h4>
-              <p class="dcnt">End-to-end visibility into inventory, vendor performance, and fulfillment operations.
+              <p class="">End-to-end visibility into inventory, vendor performance, and fulfillment operations.
               </p>
             </div>
           </div>
@@ -152,9 +152,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Retail <span>Results</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>50%</strong> reduction in customer service response time
