--- a/resources/blogs.html
+++ b/resources/blogs.html
@@ -80,11 +80,11 @@
     <em>A</em><em>r</em><em>t</em><em>i</em><em>c</em><em>l</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">Insights, best practices, and thought leadership from our ServiceNow experts. Stay updated with the latest trends and strategies.
+      <p class="fade-section mb0">Insights, best practices, and thought leadership from our ServiceNow experts. <br> Stay updated with the latest trends and strategies.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Stay Informed <span>With Our Blog</span></h4>
@@ -105,28 +105,28 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section ">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>Featured Articles</b></h3>
-        <div class="row text-center">
+        <h3 class="fade-section font40"><b>Featured Articles</b></h3>
+       <div class="row text-center innerboxes three">
           <div class="col-md-4">
             <div class="dbox">
-              <h4>AI-First <span>Transformation</span></h4>
-              <p class="dcnt">How to leverage Now Assist and AI capabilities to accelerate ServiceNow implementations and drive business value.
+              <h4>AI-First <br> <span>Transformation</span></h4>
+              <p class=" ">How to leverage Now Assist and AI capabilities to accelerate ServiceNow implementations and drive business value.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Platform <span>Optimization</span></h4>
-              <p class="dcnt">Best practices for optimizing ServiceNow performance, improving user experience, and maximizing platform ROI.
+              <h4>Platform  <br><span>Optimization</span></h4>
+              <p class=" ">Best practices for optimizing ServiceNow performance, improving user experience, and maximizing platform ROI.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Implementation <span>Success</span></h4>
-              <p class="dcnt">Lessons learned from 25+ enterprise implementations. What works, what doesn't, and how to avoid common pitfalls.
+              <h4>Implementation  <br><span>Success</span></h4>
+              <p class=" ">Lessons learned from 25+ enterprise implementations. What works, what doesn't, and how to avoid common pitfalls.
               </p>
             </div>
           </div>
@@ -134,9 +134,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Stay <span>Updated</span></h4>
           <p style="font-size: 24px; margin-bottom: 30px;">Check back regularly for new articles, insights, and updates from our ServiceNow experts.</p>
           <div style="margin-top: 50px;">
