--- a/resources/documents.html
+++ b/resources/documents.html
@@ -80,11 +80,11 @@
     <em>R</em><em>e</em><em>s</em><em>o</em><em>u</em><em>r</em><em>c</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">Whitepapers, case studies, guides, and downloadable resources to help you on your ServiceNow journey.
+      <p class="fade-section mb0">Whitepapers, case studies, guides, and downloadable resources <br> to help you on your ServiceNow journey.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Access Valuable <span>Resources</span></h4>
@@ -107,26 +107,26 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>Featured Resources</b></h3>
-        <div class="row text-center">
+        <h3 class="fade-section font40"><b>Featured Resources</b></h3>
+      <div class="row text-center innerboxes three">
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Implementation <span>Guides</span></h4>
-              <p class="dcnt">Comprehensive guides for implementing ServiceNow ITSM, CSM, HRSD, and other solutions. Step-by-step checklists and best practices.
+              <h4>Implementation <br> <span>Guides</span></h4>
+              <p class="">Comprehensive guides for implementing ServiceNow ITSM, CSM, HRSD, and other solutions. Step-by-step checklists and best practices.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Case <span>Studies</span></h4>
-              <p class="dcnt">Real-world success stories from enterprise ServiceNow transformations. Learn from organizations that achieved measurable results.
+              <h4>Case <br> <span>Studies</span></h4>
+              <p class=" ">Real-world success stories from enterprise ServiceNow transformations. Learn from organizations that achieved measurable results.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="dbox">
-              <h4>Best Practice <span>Whitepapers</span></h4>
-              <p class="dcnt">In-depth whitepapers on ServiceNow best practices, architecture patterns, and optimization strategies from our experts.
+              <h4>Best Practice <br> <span>Whitepapers</span></h4>
+              <p class=" ">In-depth whitepapers on ServiceNow best practices, architecture patterns, and optimization strategies from our experts.
               </p>
             </div>
           </div>
@@ -134,9 +134,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Download <span>Resources</span></h4>
           <p style="font-size: 24px; margin-bottom: 30px;">Contact us to access our comprehensive library of ServiceNow resources, guides, and documents.</p>
           <div style="margin-top: 50px;">
