--- a/services/consulting.html
+++ b/services/consulting.html
@@ -80,11 +80,11 @@
     <em>S</em><em>e</em><em>r</em><em>v</em><em>i</em><em>c</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">Strategic ServiceNow consulting to optimize your platform, roadmap your transformation, and unlock the full potential of your investment.
+      <p class="fade-section mb0">Strategic ServiceNow consulting to optimize your platform, roadmap your <br> transformation, and unlock the full potential of your investment.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Strategic <span>ServiceNow Consulting</span></h4>
@@ -107,33 +107,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>How We Help</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>How We Help</b></h3>
+       <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Platform <span>Assessment</span></h4>
-              <p class="dcnt">Comprehensive review of your ServiceNow platform to identify optimization opportunities, performance issues, and areas for improvement.
+              <p class="">Comprehensive review of your ServiceNow platform to identify optimization opportunities, performance issues, and areas for improvement.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Transformation <span>Roadmap</span></h4>
-              <p class="dcnt">Strategic roadmap that aligns ServiceNow investments with business goals. Prioritize initiatives and plan your journey to the agentic enterprise.
+              <p class="">Strategic roadmap that aligns ServiceNow investments with business goals. Prioritize initiatives and plan your journey to the agentic enterprise.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>AI Strategy <span>& Adoption</span></h4>
-              <p class="dcnt">Roadmap for leveraging Now Assist, Virtual Agents, and AI capabilities. Identify use cases and plan your AI transformation.
+              <p class=" ">Roadmap for leveraging Now Assist, Virtual Agents, and AI capabilities. Identify use cases and plan your AI transformation.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Architecture <span>Consulting</span></h4>
-              <p class="dcnt">Expert guidance on ServiceNow architecture, integrations, and platform design. Build a foundation that scales with your business.
+              <p class="">Expert guidance on ServiceNow architecture, integrations, and platform design. Build a foundation that scales with your business.
               </p>
             </div>
           </div>
@@ -141,9 +141,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Why Choose Our <span>Consulting</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>200+</strong> certified ServiceNow experts
