--- a/services/implementation.html
+++ b/services/implementation.html
@@ -80,11 +80,11 @@
     <em>S</em><em>e</em><em>r</em><em>v</em><em>i</em><em>c</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">End-to-end ServiceNow implementation delivered 40% faster with our AI-first methodology. From discovery to go-live, we accelerate your transformation.
+      <p class="fade-section mb0">End-to-end ServiceNow implementation delivered 40% faster with our AI-first methodology. <br> From discovery to go-live, we accelerate your transformation.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Why Our <span>Implementation Stands Out</span></h4>
@@ -107,33 +107,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>Our Implementation Services</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>Our Implementation Services</b></h3>
+       <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Discovery & <span>Strategy</span></h4>
-              <p class="dcnt">Comprehensive assessment of your current state, requirements gathering, and roadmap development. We align ServiceNow to your business goals from day one.
+              <p class=" ">Comprehensive assessment of your current state, requirements gathering, and roadmap development. We align ServiceNow to your business goals from day one.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Platform <span>Implementation</span></h4>
-              <p class="dcnt">Full ServiceNow platform implementation—ITSM, CSM, HRSD, GRC, and more. AI capabilities embedded throughout with Now Assist and Virtual Agents.
+              <p class="">Full ServiceNow platform implementation—ITSM, CSM, HRSD, GRC, and more. AI capabilities embedded throughout with Now Assist and Virtual Agents.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Custom <span>Development</span></h4>
-              <p class="dcnt">Custom applications and integrations built on ServiceNow. We extend the platform to meet your unique business needs with best practices built-in.
+              <p class="">Custom applications and integrations built on ServiceNow. We extend the platform to meet your unique business needs with best practices built-in.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
-              <h4>Go-Live & <span>Support</span></h4>
-              <p class="dcnt">Smooth go-live with comprehensive change management, training, and post-deployment support. We ensure success long after the project ends.
+              <h4>Go-Live & <br> <span>Support</span></h4>
+              <p class="">Smooth go-live with comprehensive change management, training, and post-deployment support. We ensure success long after the project ends.
               </p>
             </div>
           </div>
@@ -141,9 +141,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What You Get <span>With Us</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>40%</strong> faster delivery with AI-first methodology
