--- a/services/index.html
+++ b/services/index.html
@@ -80,17 +80,17 @@
     <em>S</em><em>e</em><em>r</em><em>v</em><em>i</em><em>c</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">From implementation to staffing to training—we deliver complete ServiceNow expertise. AI-powered transformations delivered faster, smarter, better.
+      <p class="fade-section mb0">From implementation to staffing to training—we deliver complete ServiceNow expertise. <br> AI-powered transformations delivered faster, smarter, better.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center innerboxes three">
           <div class="col-md-6">
             <div class="dbox">
               <h4>Implementation <span>Services</span></h4>
-              <p class="dcnt">End-to-end ServiceNow implementation delivered 40% faster with our AI-first methodology. From discovery to go-live, we accelerate your transformation.
+              <p class=" ">End-to-end ServiceNow implementation delivered 40% faster with our AI-first methodology. From discovery to go-live, we accelerate your transformation.
               </p>
               <p> <a href="implementation.html">Learn More <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -98,7 +98,7 @@
           <div class="col-md-6">
             <div class="dbox">
               <h4>Consulting <span>Services</span></h4>
-              <p class="dcnt">Strategic ServiceNow consulting to optimize your platform, roadmap your transformation, and unlock the full potential of your investment.
+              <p class=" ">Strategic ServiceNow consulting to optimize your platform, roadmap your transformation, and unlock the full potential of your investment.
               </p>
               <p> <a href="consulting.html">Learn More <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -106,7 +106,7 @@
           <div class="col-md-6">
             <div class="dbox">
               <h4>Staffing <span>Services</span></h4>
-              <p class="dcnt">On-demand ServiceNow talent. Deploy certified developers, administrators, and architects exactly when you need them.
+              <p class=" ">On-demand ServiceNow talent. Deploy certified developers, administrators, and architects exactly when you need them.
               </p>
               <p> <a href="staffing.html">Learn More <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -114,7 +114,7 @@
           <div class="col-md-6">
             <div class="dbox">
               <h4>Training <span>Services</span></h4>
-              <p class="dcnt">Comprehensive ServiceNow training to build internal capability. From admin fundamentals to advanced development, we make your team self-sufficient.
+              <p class=" ">Comprehensive ServiceNow training to build internal capability. From admin fundamentals to advanced development, we make your team self-sufficient.
               </p>
               <p> <a href="training.html">Learn More <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -123,9 +123,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>Why Choose <span>XoraiNow?</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>200+</strong> certified ServiceNow professionals
