--- a/services/staffing.html
+++ b/services/staffing.html
@@ -80,11 +80,11 @@
     <em>S</em><em>e</em><em>r</em><em>v</em><em>i</em><em>c</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">On-demand ServiceNow talent. Deploy certified developers, administrators, and architects exactly when you need them.
+      <p class="fade-section mb0">On-demand ServiceNow talent. Deploy certified developers,  <br>administrators, and architects exactly when you need them.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Flexible ServiceNow <span>Talent Solutions</span></h4>
@@ -107,33 +107,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>Why Choose Our Staffing</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>Why Choose Our Staffing</b></h3>
+        <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Certified <span>Professionals</span></h4>
-              <p class="dcnt">All our consultants are ServiceNow certified with proven track records. We verify credentials and experience before placement.
+              <p class=" ">All our consultants are ServiceNow certified with proven track records. We verify credentials and experience before placement.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Fast <span>Deployment</span></h4>
-              <p class="dcnt">Get the right talent deployed quickly. Our extensive pool means faster matching and onboarding for your projects.
+              <p class=" ">Get the right talent deployed quickly. Our extensive pool means faster matching and onboarding for your projects.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Flexible <span>Engagement</span></h4>
-              <p class="dcnt">Short-term or long-term, full-time or part-time—we match engagement models to your needs. Scale up or down as required.
+              <p class=" ">Short-term or long-term, full-time or part-time—we match engagement models to your needs. Scale up or down as required.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Global <span>Reach</span></h4>
-              <p class="dcnt">Access to talent across 5 global locations. Time-zone coverage and local expertise wherever you need it.
+              <p class=" ">Access to talent across 5 global locations. Time-zone coverage and local expertise wherever you need it.
               </p>
             </div>
           </div>
@@ -141,7 +141,7 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0 mt50">
       <div class="container">
         <div class="grow">
           <h4>Available <span>Roles</span></h4>
