--- a/services/training.html
+++ b/services/training.html
@@ -80,11 +80,11 @@
     <em>S</em><em>e</em><em>r</em><em>v</em><em>i</em><em>c</em><em>e</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">Comprehensive ServiceNow training to build internal capability. From admin fundamentals to advanced development, we make your team self-sufficient.
+      <p class="fade-section mb0">Comprehensive ServiceNow training to build internal capability. From admin <br> fundamentals to advanced development, we make your team self-sufficient.
       </p>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Empower Your <span>Team</span></h4>
@@ -107,33 +107,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>Training Formats</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>Training Formats</b></h3>
+       <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Instructor-Led <span>Training</span></h4>
-              <p class="dcnt">Live, interactive training sessions with certified instructors. Ask questions, get hands-on practice, and learn from real-world scenarios.
+              <p class=" ">Live, interactive training sessions with certified instructors. Ask questions, get hands-on practice, and learn from real-world scenarios.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>On-Site <span>Training</span></h4>
-              <p class="dcnt">Bring our trainers to your location for team-based learning. Customized curriculum tailored to your specific needs and use cases.
+              <p class="">Bring our trainers to your location for team-based learning. Customized curriculum tailored to your specific needs and use cases.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Virtual <span>Training</span></h4>
-              <p class="dcnt">Remote training sessions that fit your schedule and team location. Interactive virtual classrooms with hands-on labs and practice.
+              <p class=" ">Remote training sessions that fit your schedule and team location. Interactive virtual classrooms with hands-on labs and practice.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Self-Paced <span>Learning</span></h4>
-              <p class="dcnt">Comprehensive training materials, video tutorials, and hands-on labs for self-paced learning. Learn at your own speed.
+              <p class="">Comprehensive training materials, video tutorials, and hands-on labs for self-paced learning. Learn at your own speed.
               </p>
             </div>
           </div>
@@ -141,9 +141,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Your Team Will <span>Learn</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>Administration</strong> - Platform configuration, user management, and best practices
