--- a/solutions/crm.html
+++ b/solutions/crm.html
@@ -82,12 +82,12 @@
     <em>S</em><em>e</em><em>r</em><em>v</em><em>i</em><em>c</em><em>e</em>
   </span>
       </h1>
-      <p class="fade-section">Customer Service Management and Field Service Management that turn service into a competitive advantage. AI-powered experiences that delight customers.
+      <p class="fade-section mb0">Customer Service Management and Field Service Management that turn service into <br> a competitive advantage. AI-powered experiences that delight customers.
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Customer Challenge</span></h4>
@@ -110,33 +110,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow Customer Solutions</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow Customer Solutions</b></h3>
+      <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Customer Service <span>Management</span></h4>
-              <p class="dcnt">Unified case management across all channels. AI-powered routing, knowledge management, and self-service that actually works.
+              <p class="">Unified case management across all channels. AI-powered routing, knowledge management, and self-service that actually works.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Field Service <span>Management</span></h4>
-              <p class="dcnt">Intelligent scheduling, mobile workflows, and real-time technician dispatch. Get the right person to the right place at the right time.
+              <p class="">Intelligent scheduling, mobile workflows, and real-time technician dispatch. Get the right person to the right place at the right time.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Customer Portal <span>& Self-Service</span></h4>
-              <p class="dcnt">Consumer-grade portal experiences with Virtual Agent and Now Assist. Customers get instant answers without waiting.
+              <p class="">Consumer-grade portal experiences with Virtual Agent and Now Assist. Customers get instant answers without waiting.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Customer <span>Insights</span></h4>
-              <p class="dcnt">360-degree customer view with AI-powered analytics. Understand satisfaction, predict issues, and proactively engage.
+              <p class="">360-degree customer view with AI-powered analytics. Understand satisfaction, predict issues, and proactively engage.
               </p>
             </div>
           </div>
@@ -144,9 +144,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>70%</strong> faster case resolution
