--- a/solutions/finance.html
+++ b/solutions/finance.html
@@ -82,12 +82,12 @@
     <em>O</em><em>p</em><em>e</em><em>r</em><em>a</em><em>t</em><em>i</em><em>o</em><em>n</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">Strategic Portfolio Management and Financial Service Operations that drive business outcomes. Portfolio optimization and financial workflows powered by AI.
+      <p class="fade-section mb0">Strategic Portfolio Management and Financial Service Operations that drive <br> business outcomes. Portfolio optimization and financial workflows powered by AI.
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Finance Challenge</span></h4>
@@ -110,33 +110,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow Finance Solutions</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow Finance Solutions</b></h3>
+      <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Strategic Portfolio <span>Management</span></h4>
-              <p class="dcnt">Unified portfolio visibility with demand management, resource planning, and project optimization. Make data-driven decisions about where to invest.
+              <p class="">Unified portfolio visibility with demand management, resource planning, and project optimization. Make data-driven decisions about where to invest.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Financial Service <span>Operations</span></h4>
-              <p class="dcnt">Streamlined financial workflows for approvals, budget requests, and financial planning. Automated processes that reduce manual effort.
+              <p class="">Streamlined financial workflows for approvals, budget requests, and financial planning. Automated processes that reduce manual effort.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Resource <span>Management</span></h4>
-              <p class="dcnt">Optimize resource allocation across projects and initiatives. Balance capacity, skills, and demand to maximize portfolio value.
+              <p class="">Optimize resource allocation across projects and initiatives. Balance capacity, skills, and demand to maximize portfolio value.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
-              <h4>Financial <span>Insights</span></h4>
-              <p class="dcnt">AI-powered analytics and dashboards that provide real-time visibility into portfolio performance, budget utilization, and financial outcomes.
+              <h4>Financial <br> <span>Insights</span></h4>
+              <p class="">AI-powered analytics and dashboards that provide real-time visibility into portfolio performance, budget utilization, and financial outcomes.
               </p>
             </div>
           </div>
@@ -144,9 +144,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>40%</strong> improvement in portfolio ROI
