--- a/solutions/hr.html
+++ b/solutions/hr.html
@@ -82,12 +82,12 @@
     <em>D</em><em>e</em><em>l</em><em>i</em><em>v</em><em>e</em><em>r</em><em>y</em>
   </span>
       </h1>
-      <p class="fade-section">HR service delivery that transforms the employee experience and makes work, work better. Streamlined onboarding, benefits, and employee services powered by AI.
+      <p class="fade-section mb0">HR service delivery that transforms the employee experience and makes work, work better. <br> Streamlined onboarding, benefits, and employee services powered by AI.
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>HR Challenge</span></h4>
@@ -110,33 +110,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow HR Solutions</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow HR Solutions</b></h3>
+         <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Employee <span>Onboarding</span></h4>
-              <p class="dcnt">Streamlined onboarding workflows that welcome new employees with automated provisioning, documentation, and orientation tasks.
+              <p class=" ">Streamlined onboarding workflows that welcome new employees with automated provisioning, documentation, and orientation tasks.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>HR Service <span>Portal</span></h4>
-              <p class="dcnt">Single portal for all HR needs—time off, benefits, payroll, policy questions. Self-service powered by Virtual Agent and Now Assist.
+              <p class=" ">Single portal for all HR needs—time off, benefits, payroll, policy questions. Self-service powered by Virtual Agent and Now Assist.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Benefits <span>Administration</span></h4>
-              <p class="dcnt">Automated benefits enrollment, changes, and management. Clear communications and seamless integrations with benefits providers.
+              <p class=" ">Automated benefits enrollment, changes, and management. Clear communications and seamless integrations with benefits providers.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Employee <span>Insights</span></h4>
-              <p class="dcnt">Analytics and dashboards that help HR understand employee satisfaction, predict turnover, and proactively address concerns.
+              <p class="">Analytics and dashboards that help HR understand employee satisfaction, predict turnover, and proactively address concerns.
               </p>
             </div>
           </div>
@@ -144,9 +144,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>60%</strong> faster onboarding time
