--- a/solutions/it.html
+++ b/solutions/it.html
@@ -82,12 +82,12 @@
     <em>M</em><em>a</em><em>n</em><em>a</em><em>g</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>
   </span>
       </h1>
-      <p class="fade-section">ITSM, ITOM, and ITAM that modernize technology operations and free IT to focus on innovation. AI-powered automation embedded throughout.
+      <p class="fade-section mb0">ITSM, ITOM, and ITAM that modernize technology operations and free IT   to focus <br>on innovation. AI-powered automation embedded throughout.
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>IT Challenge</span></h4>
@@ -110,33 +110,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow ITSM Solutions</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow ITSM Solutions</b></h3>
+         <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>IT Service <span>Management</span></h4>
-              <p class="dcnt">Unified ITSM with incident, problem, change, and request management. AI-powered routing, automation, and predictive intelligence.
+              <p class="">Unified ITSM with incident, problem, change, and request management. AI-powered routing, automation, and predictive intelligence.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>IT Operations <span>Management</span></h4>
-              <p class="dcnt">End-to-end visibility into IT infrastructure. Event management, service mapping, and discovery that connects everything.
+              <p class="">End-to-end visibility into IT infrastructure. Event management, service mapping, and discovery that connects everything.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>IT Asset <span>Management</span></h4>
-              <p class="dcnt">Complete lifecycle management for hardware, software, and cloud assets. Financial and compliance tracking built-in.
+              <p class="">Complete lifecycle management for hardware, software, and cloud assets. Financial and compliance tracking built-in.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Virtual Agent & <span>AI Assist</span></h4>
-              <p class="dcnt">Intelligent chatbots and Now Assist that resolve common issues instantly. Self-service that actually works, powered by generative AI.
+              <p class="">Intelligent chatbots and Now Assist that resolve common issues instantly. Self-service that actually works, powered by generative AI.
               </p>
             </div>
           </div>
@@ -144,9 +144,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>50%</strong> reduction in MTTR (Mean Time to Resolution)
