--- a/solutions/supply-chain.html
+++ b/solutions/supply-chain.html
@@ -82,12 +82,12 @@
     <em>M</em><em>a</em><em>n</em><em>a</em><em>g</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>
   </span>
       </h1>
-      <p class="fade-section">Supply chain resilience and procurement workflows that prevent disruption. Intelligent automation that keeps operations flowing smoothly.
+      <p class="fade-section mb0">Supply chain resilience and procurement workflows that prevent disruption. <br> Intelligent automation that keeps operations flowing smoothly.
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Supply Chain Challenge</span></h4>
@@ -110,30 +110,30 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow Supply Chain Solutions</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow Supply Chain Solutions</b></h3>
+        <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Procurement <span>Operations</span></h4>
               <p class="dcnt">Streamlined procurement workflows with automated requisition, approval, and vendor management. Faster purchasing cycles and better compliance.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Supply Chain <span>Visibility</span></h4>
               <p class="dcnt">End-to-end visibility into supply chain operations. Track orders, inventory, and vendor performance in real-time.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Vendor <span>Management</span></h4>
               <p class="dcnt">Centralized vendor lifecycle management with performance tracking, risk assessment, and contract management. Optimize supplier relationships.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Supply Chain <span>Resilience</span></h4>
               <p class="dcnt">AI-powered analytics and automation that predict disruptions, optimize inventory, and enable rapid response to supply chain challenges.
@@ -144,9 +144,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>40%</strong> faster procurement cycles
