--- a/index.html
+++ b/index.html
@@ -17,66 +17,8 @@
 
 <body>
   <div class="relative overflow">
-
-    <div class="topbar">
-      <div class="">
-        <div class="header">
-          <h1><a href="index.html"><img src="images/logo.png" alt="XoraiNow" class="logo"></a></h1>
-<div class="hamburger" id="menuToggle">
-    <i class="ri-menu-line"></i>
-  </div>
-          <nav id="mainNav">
-            <ul class="menu flex align-items-center">
-              <li class="dropdown">
-                <a href="industries/index.html">Industries <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="industries/education.html">Education</a></li>
-                  <li><a href="industries/healthcare.html">Healthcare</a></li>
-                  <li><a href="industries/retail.html">Retail</a></li>
-                  <li><a href="industries/financial-services.html">Financial Services</a></li>
-                  <li><a href="industries/energy.html">Energy</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="solutions/index.html">Solutions <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="solutions/it.html">IT Service Management (ITSM)</a></li>
-                  <li><a href="solutions/crm.html">Customer Relationship Management (CRM)</a></li>
-                  <li><a href="solutions/hr.html">HR Service Delivery (HRSD)</a></li>
-                  <li><a href="solutions/security-risk.html">Security & Risk (GRC)</a></li>
-                  <li><a href="solutions/finance.html">Finance & Operations</a></li>
-                  <li><a href="solutions/supply-chain.html">Supply Chain Management</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="services/index.html">Services <i class="ri-arrow-down-s-line"></i></a>
-
-                <ul class="submenu">
-                  <li><a href="services/implementation.html">Implementation</a></li>
-                  <li><a href="services/consulting.html">Consulting</a></li>
-                  <li><a href="services/staffing.html">Staffing</a></li>
-                  <li><a href="services/training.html">Training</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="resources/index.html">Resources <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="resources/blogs.html">Blogs</a></li>
-                  <li><a href="resources/documents.html">Documents</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="company/index.html">Company <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="company/about.html">About Us</a></li>
-                  <li><a href="company/events.html">Events</a></li>
-                  <li><a href="company/careers.html">Careers</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-
-          <a href="contact.html" class="btn btn-green">Let's talk <i class="ri-smartphone-line"></i></a>
-        </div>
-      </div>
-    </div>
+<div id="header-placeholder"></div>
+  
 <div id="content-wrapper" class="relative overflow">
     <div class="herobanner">
       <h4 class="fade-section">ServiceNow Specialists | 200+ Certified Professionals | 5 Global Locations
@@ -86,7 +28,7 @@
     <em>S</em><em>t</em><em>a</em><em>r</em><em>t</em><em>s</em><em>&nbsp;</em><em>H</em><em>e</em><em>r</em><em>e</em>
   </span>
       </h1>
-      <p class="fade-section">AI-powered ServiceNow transformations delivered 40% faster. 200 certified professionals across 5 global locations building the future of enterprise workflows.
+      <p class="fade-section">AI-powered ServiceNow transformations delivered 40% faster. <br> 200 certified professionals across 5 global locations building the future of enterprise workflows.
 
       </p>
       <div class="fade-section" style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
@@ -132,8 +74,8 @@
     <div class="ideas">
       <div class="ideas fade-section">
         <div class="container">
-          <h3 class="fade-section"><b> Why XoraiNow </b></h3>
-          <p class="fade-section" style="font-size: 24px; margin-bottom: 50px; color: #ccc;">In January 2026, ServiceNow CEO Bill McDermott declared this "the year of agentic collaboration in the enterprise." We're here to make that vision your reality.</p>
+          <h3 class="fade-section"> Why <b>XoraiNow </b></h3>
+          <p class="fade-section" style="font-size: 24px; margin-bottom: 50px; color: #ccc;">In January 2026, ServiceNow CEO Bill McDermott declared this "the year of agentic <br>collaboration in the enterprise." We're here to make that vision your reality.</p>
 
           <div class="row text-center">
             <div class="col-md-4">
@@ -247,14 +189,16 @@
           <div class="grow">
             <h4>What We Do <br><span> Services</span> That Deliver<br> Outcomes</h4>
             <ul class="list-unstyled text-start d-inline-block">
-              <li> <img src="images/tick.png" alt=""> Implementation — End-to-end ServiceNow deployments with AI integration baked in
+              <li> <img src="images/tick.png" alt=""> 
+               
+                <span> <em>Implementation</em>   End-to-end ServiceNow deployments with AI integration baked in</span>
               </li>
               <li> <img src="images/tick.png" alt="">
-                Consulting — Strategic roadmaps, architecture design, and AI governance advisory
+               <span> <em> Consulting</em> Strategic roadmaps, architecture design, and AI governance advisory</span> 
               </li>
-              <li><img src="images/tick.png" alt=""> Staffing — Certified professionals ready to embed with your team
+              <li><img src="images/tick.png" alt=""> <span> <em> Staffing </em> Certified professionals ready to embed with your team</span> 
               </li>
-              <li><img src="images/tick.png" alt=""> Training — Certification programs, corporate training, and AI enablement workshops</li>
+              <li><img src="images/tick.png" alt=""> <span> <em>Training</em>   Certification programs, corporate training, and AI enablement workshops </span></li>
             </ul>
 
 
@@ -337,17 +281,34 @@
       <div class="section">
         <div class="container">
           <div class="portfolio">
-            <h3>Our Projects
-            </h3>
+  <h3>Our Projects</h3>
 
-            <div class="pslider">
-              <img src="images/service_card1.jpg" alt="">
+  <div class="pslider">
+    <div class="project-card">
+      <img src="images/itms.jpg" alt="ServiceNow ITSM Implementation">
+      <div class="project-info">
+        <h4>ITSM Transformation</h4>
+        <p>Streamlined Incident and Change Management for a global retail firm.</p>
+      </div>
+    </div>
 
-              <img src="images/service_card2.jpg" alt="">
-            </div>
+    <div class="project-card">
+      <img src="images/hrms.jpg" alt="ServiceNow HRSD Portal">
+      <div class="project-info">
+        <h4>HR Service Delivery</h4>
+        <p>Developed a custom Employee Service Center for automated onboarding.</p>
+      </div>
+    </div>
 
-
-          </div>
+    <div class="project-card">
+      <img src="images/app.jpg" alt="Custom App Engine Development">
+      <div class="project-info">
+        <h4>App Engine Solution</h4>
+        <p>Built a custom Asset Tracking application using ServiceNow App Engine.</p>
+      </div>
+    </div>
+  </div>
+</div>
         </div>
 
       </div>
@@ -425,58 +386,11 @@
 
 
      </div>
-    <footer class="text-center footer">
-      <div>
+   
 
-        <div class="container">
-          <div>
-            <h4>Ready to Build the Agentic Enterprise?</h4>
-            <a href="contact.html" class="btn btn-green mt-3">Let's Talk <i class="ri-arrow-right-line"></i></a>
-          </div>
- <img src="images/logo.png" class="frlogo">
-          <div class="row ftmenu">
 
-           
-            <div class="col-md-2">
-              &nbsp;
-            </div>
-            <div class="col-md-1"> &nbsp;</div>
-            <div class="col-md-3">
-              <h5>Industries</h5>
-              <ul>
-                <li><a href="industries/education.html"><i class="ri-arrow-right-line"></i> Education</a></li>
-                <li><a href="industries/healthcare.html"><i class="ri-arrow-right-line"></i> Healthcare</a></li>
-                <li><a href="industries/retail.html"><i class="ri-arrow-right-line"></i> Retail</a></li>
-                <li><a href="industries/financial-services.html"><i class="ri-arrow-right-line"></i> Financial Services</a></li>
-                <li><a href="industries/energy.html"><i class="ri-arrow-right-line"></i> Energy</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3">
-              <h5>Solutions</h5>
-              <ul>
-                <li><a href="solutions/it.html"><i class="ri-arrow-right-line"></i> IT Service Management</a></li>
-                <li><a href="solutions/crm.html"><i class="ri-arrow-right-line"></i> CRM</a></li>
-                <li><a href="solutions/hr.html"><i class="ri-arrow-right-line"></i> HR Service Delivery</a></li>
-                <li><a href="solutions/security-risk.html"><i class="ri-arrow-right-line"></i> Security & Risk</a></li>
-                <li><a href="solutions/finance.html"><i class="ri-arrow-right-line"></i> Finance & Operations</a></li>
-                <li><a href="solutions/supply-chain.html"><i class="ri-arrow-right-line"></i> Supply Chain</a></li>
-              </ul>
-            </div>
+<div id="footer-placeholder"></div>
 
-            <div class="col-md-3">
-              <h5>Contact</h5>
-              <p> <strong>hello@xorainow.com</strong> </p>
-              <p>
-                <strong>Global Headquarters:</strong><br>Guwahati, India<br><br>
-                <strong>Delivery Centers:</strong><br>Hyderabad | Noida<br><br>
-                <strong>Client Offices:</strong><br>Dubai, UAE | United States
-              </p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </footer>
     <div class="trail"></div>
 
 
@@ -599,6 +513,20 @@ menuToggle.addEventListener('click', () => {
         }
     });
 });</script>
+<script>
+  // Function to load HTML into a placeholder
+  function loadElement(id, file) {
+    fetch(file)
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById(id).innerHTML = data;
+      });
+  }
+
+  // Call the function for header and footer
+  loadElement('header-placeholder', 'header.html');
+  loadElement('footer-placeholder', 'footer.html');
+</script>
 </body>
 
 </html>
