--- a/industries/energy.html
+++ b/industries/energy.html
@@ -82,13 +82,13 @@
     <em>E</em><em>n</em><em>e</em><em>r</em><em>g</em><em>y</em>
   </span>
       </h1>
-      <p class="fade-section">From grid modernization to field operations to safety management—ServiceNow helps energy companies operate safely, efficiently, and sustainably.
+      <p class="fade-section mb0">From grid modernization to field operations to safety management—ServiceNow <br> helps energy companies operate safely, efficiently, and sustainably.
 
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Campus Challenge</span></h4>
@@ -111,33 +111,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow for Education</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow for Education</b></h3>
+      <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Student <span>Service Center</span></h4>
-              <p class="dcnt">A single portal for everything students need—enrollment, housing, financial aid, IT support, and more. Self-service that actually works.
+              <p class="">A single portal for everything students need—enrollment, housing, financial aid, IT support, and more. Self-service that actually works.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>IT Service <span>Management</span></h4>
-              <p class="dcnt">Modern ITSM that supports hybrid learning environments, campus technology, and the research enterprise.
+              <p class="">Modern ITSM that supports hybrid learning environments, campus technology, and the research enterprise.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>HR Service <span>Delivery</span></h4>
-              <p class="dcnt">Streamline faculty onboarding, benefits administration, and employee services with workflows that respect academic calendars and tenure complexity.
+              <p class="">Streamline faculty onboarding, benefits administration, and employee services with workflows that respect academic calendars and tenure complexity.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Security <span>Operations</span></h4>
-              <p class="dcnt">Protect student data, research IP, and campus systems with integrated security workflows and compliance automation.
+              <p class="">Protect student data, research IP, and campus systems with integrated security workflows and compliance automation.
               </p>
             </div>
           </div>
@@ -145,9 +145,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>60%</strong> reduction in student service response time
