--- a/solutions/index.html
+++ b/solutions/index.html
@@ -80,19 +80,19 @@
     <em>S</em><em>o</em><em>l</em><em>u</em><em>t</em><em>i</em><em>o</em><em>n</em><em>s</em>
   </span>
       </h1>
-      <p class="fade-section">ServiceNow's platform powers every function of the enterprise. We help you unlock its full potential—with AI embedded throughout.
+      <p class="fade-section">ServiceNow's platform powers every function of the enterprise. We help you <br> unlock its full potential—with AI embedded throughout.
 
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="row text-center">
+         <div class="row text-center innerboxes three">
           <div class="col-md-4">
             <div class="dbox">
               <h4>IT <span>Solutions</span></h4>
-              <p class="dcnt">ITSM, ITOM, and ITAM that modernize technology operations and free IT to focus on innovation.
+              <p class=" ">ITSM, ITOM, and ITAM that modernize technology operations and free IT to focus on innovation.
               </p>
               <p> <a href="it.html">Explore IT Solutions <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -100,7 +100,7 @@
           <div class="col-md-4">
             <div class="dbox">
               <h4>Customer <span>Solutions</span></h4>
-              <p class="dcnt">Customer service management and field service that turn service into a competitive advantage.
+              <p class=" ">Customer service management and field service that turn service into a competitive advantage.
               </p>
               <p> <a href="crm.html">Explore CRM Solutions <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -108,7 +108,7 @@
           <div class="col-md-4">
             <div class="dbox">
               <h4>Employee <span>Solutions</span></h4>
-              <p class="dcnt">HR service delivery that transforms the employee experience and makes work, work better.
+              <p class="">HR service delivery that transforms the employee experience and makes work, work better.
               </p>
               <p> <a href="hr.html">Explore HR Solutions <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -116,7 +116,7 @@
           <div class="col-md-4">
             <div class="dbox">
               <h4>Security & <span>Risk</span></h4>
-              <p class="dcnt">GRC, SecOps, and vulnerability management that protect the enterprise without slowing it down.
+              <p class="">GRC, SecOps, and vulnerability management that protect the enterprise without slowing it down.
               </p>
               <p> <a href="security-risk.html">Explore Security & Risk <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -124,7 +124,7 @@
           <div class="col-md-4">
             <div class="dbox">
               <h4>Finance & <span>Operations</span></h4>
-              <p class="dcnt">Strategic portfolio management and financial service operations that drive business outcomes.
+              <p class=" ">Strategic portfolio management and financial service operations that drive business outcomes.
               </p>
               <p> <a href="finance.html">Explore Finance Solutions <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -132,7 +132,7 @@
           <div class="col-md-4">
             <div class="dbox">
               <h4>Supply <span>Chain</span></h4>
-              <p class="dcnt">Supply chain resilience and procurement workflows that prevent disruption.
+              <p class=" ">Supply chain resilience and procurement workflows that prevent disruption.
               </p>
               <p> <a href="supply-chain.html">Explore Supply Chain <i class="ri-arrow-right-line"></i></a> </p>
             </div>
@@ -141,9 +141,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>AI-Powered <span>Everything</span></h4>
           <p style="font-size: 24px; margin-bottom: 30px;">Every solution we implement includes AI capabilities—from Now Assist generative AI to Virtual Agents to Predictive Intelligence. Because automation without intelligence isn't transformation.</p>
         </div>
