--- a/solutions/security-risk.html
+++ b/solutions/security-risk.html
@@ -82,12 +82,12 @@
     <em>R</em><em>i</em><em>s</em><em>k</em>
   </span>
       </h1>
-      <p class="fade-section">GRC, SecOps, and vulnerability management that protect the enterprise without slowing it down. Security operations integrated with business workflows.
+      <p class="fade-section">GRC, SecOps, and vulnerability management that protect the enterprise without <br>slowing it down.  Security operations integrated with business workflows.
       </p>
 
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Security Challenge</span></h4>
@@ -110,33 +110,33 @@
 
     <div class="section">
       <div class="container">
-        <h3 class="fade-section" style="font-size: 60px; margin-bottom: 50px;"><b>ServiceNow Security Solutions</b></h3>
-        <div class="row text-center">
-          <div class="col-md-4">
+        <h3 class="fade-section font40"><b>ServiceNow Security Solutions</b></h3>
+        <div class="row text-center innerboxes">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Governance, Risk & <span>Compliance</span></h4>
-              <p class="dcnt">Unified GRC platform for risk assessment, policy management, compliance tracking, and audit management. Automated workflows reduce manual effort.
+              <p class=" ">Unified GRC platform for risk assessment, policy management, compliance tracking, and audit management. Automated workflows reduce manual effort.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Security <span>Operations</span></h4>
-              <p class="dcnt">Integrated SecOps with incident response, threat intelligence, and security orchestration. Faster detection and response to security events.
+              <p class=" ">Integrated SecOps with incident response, threat intelligence, and security orchestration. Faster detection and response to security events.
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Vulnerability <span>Response</span></h4>
-              <p class="dcnt">Automated vulnerability management with prioritized remediation, patch management, and compliance tracking. Close gaps before they become breaches.
+              <p class=" ">Automated vulnerability management with prioritized remediation, patch management, and compliance tracking. Close gaps before they become breaches.
               </p>
             </div>
           </div>
-          <div class="col-md-6" style="margin: 40px auto 0;">
+          <div class="col-md-3">
             <div class="dbox">
               <h4>Security <span>Insights</span></h4>
-              <p class="dcnt">AI-powered security analytics and dashboards. Understand risk posture, predict threats, and make data-driven security decisions.
+              <p class=" ">AI-powered security analytics and dashboards. Understand risk posture, predict threats, and make data-driven security decisions.
               </p>
             </div>
           </div>
@@ -144,9 +144,9 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section padt0">
       <div class="container">
-        <div class="grow">
+        <div class="grow mt50">
           <h4>What Transformation <span>Looks Like</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>50%</strong> faster security incident response
